2004-11-13  James Bowes  <bowes@cs.dal.ca>

	* src/yelp-man-parser.c: (parser_read_until), 
	(parser_parse_table), (parser_make_link): Add in 
	detection of page_name(section_num) style man page 
	references, and create the appropriate link.

2004-11-08  Sebastien Bacher  <seb128@debian.org>

	* configure.in:
	* src/Makefile.am:
	* src/yelp-main.c: (main):
	patch by Christian Persch <chpe@gnome.org> to enable the compilation 
	against firefox' gtkmozembed.

2004-11-01  Shaun McCance  <shaunm@gnome.org>

	* NEWS:
	* configure.in:
	* po/*.po:
	- Version 2.9.1

	* src/Makefile.am:
	- Remove debug for release

2004-11-01  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* src/Makefile.am:
	- Do the -fno-rtti thing the way epiphany does it

	* data/ui/yelp-ui.xml:
	* src/yelp-base.c:
	* src/yelp-db-pager.c:
	* src/yelp-utils.c:
	* src/yelp-window.c:
	- Added stub for reload.  Don't use it unless you like things to crash
	- Cancellation is somewhat working

	* po/POTFILES.in:
	- Added data/yelp.schemas.in and src/yelp-settings.c

2004-10-28  James Henstridge  <james@jamesh.id.au>

	* src/Makefile.am: fix up handling of built sources for
	srcdir!=builddir builds.

	* po/POTFILES.in: remove some files that have been removed.

	* data/Makefile.am: add some files to the clean list.

	* Makefile.am: add intltool files to the distclean list.

	* configure.in: clean up a bit, removing obsolete macro usage.

	* autogen.sh: use the gnome-common autogen.sh script.  Request a
	Automake 1.7.

2004-10-26  Shaun McCance  <shaunm@gnome.org>

	* data/ui/yelp-ui.xml:
	* src/Makefile.am:
	* src/yelp-base.c:
	* src/yelp-gecko-utils.cpp:
	* src/yelp-gecko-utils.h:
	* src/yelp-html-gecko.c:
	* src/yelp-html.h:
	* src/yelp-window.c:
	* src/yelp-window.h:
	- Patch from Don Scorgie for popup menus on links

2004-10-26  Shaun McCance  <shaunm@gnome.org>

	* data/yelp.schemas.in:
	* data/ui/yelp.glade:
	* src/yelp-gecko-utils.cpp:
	* src/yelp-gecko-utils.h:
	* src/yelp-html-gecko.c: