@@ -1,3 +1,10 @@
+2004-11-13  Shaun McCance  <shaunm@gnome.org>
+
+	* src/test-pager.c:
+	* src/yelp-man-pager.c:
+	* stylesheets/man2html.xsl:
+	- More manpage work
+
 2004-11-13  James Bowes  <bowes@cs.dal.ca>
 
 	* src/yelp-man-parser.c: (parser_read_until), 
